2012-03-12  Murray Cumming  <murrayc@murrayc.com>

	Fix linker problem with the examples.

	* examples/Makefile.am: Add CAIROMM_LIBS.
	This is needed now to a change in behaviour of the linker
	in recent distro versions.

2010-11-03  Mark Vender  <markv743@yahoo.co.uk>

	Update the documentation.

	Based on the documentation of the C API.
	Bug #47142

1.10.0:

2010-11-03  Murray Cumming  <murrayc@murrayc.com>

	Context::arc(): Correct the documentation, as in the C documentation.

	* cairomm/context.h: arc(): Update the documentation based on the latest
	version of the cairo_arc() documentation, which was apparently fixed since
	we last wrote the C++ documentation based on it.
	This fixes bug #31345 (Christopher Head) about bad math in arc()
	documentation.

1.9.6:

2010-09-29  Armin Burgmeier  <armin@arbur.net>

	Added support for 64 bit and Visual Studio 2010.

	* MSVC_Net2008/.cvsignore:
	* MSVC_Net2005/examples/png-file/png-file.vcproj:
	* MSVC_Net2008/examples/png-file/png-file.vcproj: Removed.

	* MSVC_Net2005/README:
	* MSVC_Net2005/cairomm.sln:
	* MSVC_Net2005/cairomm/cairomm.vcproj:
	* MSVC_Net2005/examples/image-surface/image-surface.vcproj:
	* MSVC_Net2005/examples/pdf-surface/pdf-surface.vcproj:
	* MSVC_Net2005/examples/ps-surface/ps-surface.vcproj:
	* MSVC_Net2005/examples/svg-surface/svg-surface.vcproj:
	* MSVC_Net2005/examples/text-rotate/text-rotate.vcproj:
	* MSVC_Net2005/examples/toy-text/toy-text.vcproj:
	* MSVC_Net2005/examples/user-font/user-font.vcproj:
	* MSVC_Net2005/gendef/gendef.vcproj:
	* MSVC_Net2008/README:
	* MSVC_Net2008/cairomm.sln:
	* MSVC_Net2008/cairomm/cairomm.vcproj:
	* MSVC_Net2008/examples/image-surface/image-surface.vcproj:
	* MSVC_Net2008/examples/pdf-surface/pdf-surface.vcproj:
	* MSVC_Net2008/examples/ps-surface/ps-surface.vcproj:
	* MSVC_Net2008/examples/svg-surface/svg-surface.vcproj:
	* MSVC_Net2008/examples/text-rotate/text-rotate.vcproj:
	* MSVC_Net2008/examples/toy-text/toy-text.vcproj: