@@ -28,6 +28,4 @@ include $(top_srcdir)/build/doc-reference.am
 dist_noinst_DATA +=			\
 	doc-install.pl			\
 	doc-postprocess.pl		\
-	tagfile-to-devhelp2.xsl		\
-	reference/cairomm.css		\
-	reference/cairomm-header.html
+	tagfile-to-devhelp2.xsl
