@@ -1,8 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
-        <title>$title</title>
-        <link href="cairomm.css" rel="stylesheet" type="text/css">
-    </head>
-<body>
