@@ -1,3 +1,8 @@
+2012-03-12  Mark Vender  <markv743@yahoo.co.uk>
+
+	Use GNOME style in the documentation
+	Bug #47155
+
 2012-03-12  Murray Cumming  <murrayc@murrayc.com>
 
 	Fix linker problem with the examples.
@@ -6,7 +11,7 @@
 	This is needed now to a change in behaviour of the linker
 	in recent distro versions.
 
-2010-11-03  Mark Vender  <markv743@yahoo.co.uk>
+2012-03-12  Mark Vender  <markv743@yahoo.co.uk>
 
 	Update the documentation.
 
